# Tersse

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RUN.md  TODO.md  build.rs
docker/: entrypoint.sh  run-valgrind-examples.sh  run-valgrind-tests.sh
example/basic/: flash.rs  main.rs  style.rs
example/reflow/: main.rs
specifications/: buttons.txt  internal_processes.txt  message_gutter.txt  public_api.txt  text_input_field.txt  text_locked_scrollable.txt  tui_element_text_input_property.txt  tui_elements.txt  tui_elements_redrawing.txt  tui_screen.txt
src/: ai_output.rs  clipboard.rs  constants.rs  element_id.rs  element_presets.rs  element_store.rs  legacy_element_store.rs  lib.rs  main.rs  runtime.rs  terminal_input.rs  test_api.rs
src/backend/: gemini.rs  mod.rs
src/pure/: button.rs  element_id.rs  element_placement.rs  focus_key.rs  focus_order.rs  focus_store.rs  keyboard.rs  layout_reflow.rs  message_gutter.rs  mod.rs  resize_debounce.rs  screen_scroll.rs  scroll_view.rs  terminal_bounds.rs  terminal_input_batch.rs  text_input.rs  text_wrap.rs  ui_redraw.rs
src/pure_test/: element_id.rs  element_placement.rs  focus_order.rs  focus_store.rs  keyboard.rs  layout_reflow.rs  message_gutter.rs  mod.rs  resize_debounce.rs  screen_scroll.rs  scroll_view.rs  terminal_bounds.rs  terminal_input_batch.rs  terminal_poll_coalesce.rs  text_input.rs  text_wrap.rs  ui_redraw.rs
src/runtime/: colors.rs  core.rs  debug_draw_delay.rs  element_store.rs  elements.rs  events.rs  focus.rs  layout.rs  message_gutter.rs  placement.rs  render.rs  resize.rs  screen_scroll.rs  text_input_state.rs  types.rs  ui_session.rs  ui_task_queuer.rs
tests/: lib_element_store.rs  pure_button.rs  pure_element_id.rs  pure_element_placement.rs  pure_focus_order.rs  pure_focus_store.rs  pure_keyboard.rs  pure_layout_reflow.rs  pure_message_gutter.rs  pure_resize_debounce.rs  pure_screen_scroll.rs  pure_scroll_view.rs  pure_terminal_bounds.rs  pure_terminal_input_batch.rs  pure_text_input.rs  pure_text_wrap.rs  pure_ui_redraw.rs  runtime_colors.rs  runtime_layout.rs  runtime_types.rs  ui_redraw_debounce.rs
