[package]
name = "tersse"
version = "0.1.0"
edition = "2021"
description = "Cross-platform curses TUI"
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
default = ["pure-tests"]
pure-tests = []
basic-example = ["dep:tokio"]

[dependencies]
arboard = "3"
crossterm = "0.28"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"], optional = true }

[target.'cfg(windows)'.dependencies]
# win32 = existing console; default win32a opens a separate GDI window
pancurses = { version = "0.17", features = ["win32"] }

[target.'cfg(not(windows))'.dependencies]
pancurses = "0.17"

[profile.release]
lto = true
strip = true

[[bin]]
name = "basic_example"
path = "example/basic/main.rs"
required-features = ["basic-example"]
