[package]
name = "tersse"
version = "0.2.0"
edition = "2021"
description = "Cross-platform curses TUI"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Four44Four/Tersse"
keywords = ["UI", "curses", "terminal", "async", "simple"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
build = "build.rs"

[features]
default = []
pure-tests = []
# Internal pure modules plus runtime/layout helpers used only by integration tests.
test-api = ["pure-tests"]
debug_should_draw_do_delay = []

[dependencies]
ahash = "0.8"
arboard = "3"
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

[target.'cfg(windows)'.dependencies]
# win32 = existing console; default win32a opens a separate GDI window
pancurses = { version = "0.17", features = ["win32"] }

[target.'cfg(not(windows))'.dependencies]
pancurses = "0.17"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[[bin]]
name = "reflow_example"
path = "example/reflow/main.rs"

[[bin]]
name = "basic_example"
path = "example/basic/main.rs"
